# Sound-Processor

./: .gitignore  CMakeLists.txt  README.md  config.txt  config_incr.txt  config_incr2.txt  main.cpp  objects_fabric.hpp
lib/: CMakeLists.txt  reverbConv.cpp  sound_pr.cpp  sound_pr.hpp
tests/: CMakeLists.txt  conv_test.cpp
